Add getUserPublications
